change autoplay speed to 5s

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
       slidesToShow: 3,
       infinite: true,
       autoplay: true,
+      autoplaySpeed: 5000,
     });
     </script>
   </body>
