skip bibtex for now

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </section>
 
 
-    <section class="section" id="BibTeX">
+    <!-- <section class="section" id="BibTeX">
       <div class="container content">
         <div class="columns is-centered">
           <div class="column is-two-thirds has-text-justified">
@@ -283,7 +283,7 @@
   volume = {37},
   number = {6},
   year = {2020}
-}</code></pre>
+}</code></pre> -->
           </div>
         </div>
       </div>
