have bibtex without volume info

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </section>
 
 
-    <!-- <section class="section" id="BibTeX">
+    <section class="section" id="BibTeX">
       <div class="container content">
         <div class="columns is-centered">
           <div class="column is-two-thirds has-text-justified">
@@ -280,10 +280,10 @@
   title     = {Consistent Video Depth Estimation},
   booktitle = {ACM Transactions on Graphics (Proceedings of ACM SIGGRAPH)},
   publisher = {ACM},
-  volume = {37},
-  number = {6},
+  <!-- volume = {37}, -->
+  <!-- number = {6}, -->
   year = {2020}
-}</code></pre> -->
+}</code></pre>
           </div>
         </div>
       </div>
