--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
   title     = {Consistent Video Depth Estimation},
   booktitle = {ACM Transactions on Graphics (Proceedings of ACM SIGGRAPH)},
   publisher = {ACM},
-  <!-- volume = {37}, -->
-  <!-- number = {6}, -->
+  volume = {39},
+  number = {4},
   year = {2020}
 }</code></pre>
           </div>
