added arxiv link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <figure class="image is-96x96 container">
                       <img src="images/paper_thumbnail.png" alt="paper">
                   </figure>
-                  <p><a href="">Paper</a></p>
+                  <p><a href="https://arxiv.org/abs/2004.15021">Paper</a></p>
                 </div>
                 <div class="column has-text-centered">
                   <figure class="image is-96x96 container">
