--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css">
     <link rel="stylesheet" href="css/carousel.css" type="text/css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
   </head>
   <body>
 
@@ -185,6 +186,8 @@
             <figure class="image is-16by9">
               <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/5Tia2oblJAg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
+            <br>
+            <p><a href="https://www.zhihu.com/zvideo/1239496041512525824"><span class="iconify" data-icon="simple-icons:zhihu" data-inline="false"></span></a> Please check <a href="https://www.zhihu.com/zvideo/1239496041512525824">here</a> if you cannot view the video.</p>
           </div>
         </div>
       </div>
