Finally code is released. Added link to github code

--- a/index.html
+++ b/index.html
@@ -63,20 +63,19 @@
               <div class="columns is-variable is-8">
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
-                      <img src="images/paper_thumbnail.png" alt="paper">
+                    <a href="https://arxiv.org/abs/2004.15021"><img src="images/paper_thumbnail.png" alt="paper"></a>
                   </figure>
                   <p><a href="https://arxiv.org/abs/2004.15021">Paper</a></p>
                 </div>
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
-                    <img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png" alt="github">
+                    <a href="https://github.com/facebookresearch/consistent_depth"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png" alt="github"></a>
                   </figure>
-                  <p><a href="">Code</a></p>
-                  <p><small>[coming soon]</small></p>
+                  <p><a href="https://github.com/facebookresearch/consistent_depth">Code</a></p>
                 </div>
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
-                    <img src="images/supplementary_thumbnail.png" alt="Supplementary">
+			             <a href="supp_website/index.html"><img src="images/supplementary_thumbnail.png" alt="Supplementary"></a>
                   </figure>
                   <p class="content is-small"><a href="supp_website/index.html">Supplementary material</a></p>
                 </div>
