--- a/index.html
+++ b/index.html
@@ -272,6 +272,43 @@
     </section>
 
 
+
+    <section class="section" id="Press">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-two-thirds content">
+            <h2 class="title is-3">Media</h2>
+            <div class="level">
+              <div class="level-left">
+                <div class="level-item">
+                  <figure class="image is-64x64 icon">
+                    <a href="https://youtu.be/QSVrKK_uHoU"><img class="is-rounded" src="https://yt3.ggpht.com/a/AATXAJzV7GtApxdOTiRhzYwt8-ZP5SBlp3c8R11OxBSOIA=s288-c-k-c0xffffffff-no-rj-mo" alt="Two Minute Papers"></a>
+                  </figure>
+                </div>
+
+                <div class="level-item">
+                  <figure class="image is-64x64 icon">
+                    <a href="https://mp.weixin.qq.com/s/WlDrvXDp28WTxTKRzNUfxA"><img class="is-rounded" src="https://img.chainnews.com/upload/avatar/56d6ed86-00d5-5725-944b-c1da0cde36b6_HrfLutj.jpg-avatar" alt="机器之心"></a>
+                  </figure>
+                </div>
+                <div class="level-item">
+                  <figure class="image is-64x64 icon">
+                    <a href="https://mp.weixin.qq.com/s/J9DIDMHc6uHPQ8snadRcPA"><img class="is-rounded" src="https://pic3.zhimg.com/v2-ca6e7ffc10a0d10edbae635cee82d007_l.jpg" alt="量子位"></a>
+                  </figure>
+                </div>
+                <div class="level-item">
+                  <figure class="image is-64x64 icon">
+                    <a href="https://zhuanlan.zhihu.com/p/150065283"><img class="is-rounded" src="https://pic2.zhimg.com/v2-c48779a8d4951aa2573611d302f3bada_l.jpg" alt="伯禹人工智能学院"></a>
+                  </figure>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <section class="section" id="BibTeX">
       <div class="container content">
         <div class="columns is-centered">
