--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <!-- Links -->
         <div class="hero-foot">
           <div class="columns is-centered">
-            <div class="column is-half">
-              <div class="columns is-variable is-8">
+            <div class="column is-two-thirds">
+              <div class="columns is-variable is-2">
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
                     <a href="https://arxiv.org/abs/2004.15021"><img src="images/paper_thumbnail.png" alt="paper"></a>
@@ -72,6 +72,12 @@
                     <a href="https://github.com/facebookresearch/consistent_depth"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png" alt="github"></a>
                   </figure>
                   <p><a href="https://github.com/facebookresearch/consistent_depth">Code</a></p>
+                </div>
+                <div class="column has-text-centered has-text-centered">
+                  <figure class="image is-16by9 container">
+                   <a href="https://www.dropbox.com/s/05beidjdeu7tmv8/SIGGRAPH_2020_Presentations%20to%20share.key?dl=0"><img src="images/slides.jpg" alt="Slides" style="max-height:64px; max-width: 114px"></a>
+                  </figure>
+                  <p class="content"><a href="https://www.dropbox.com/s/05beidjdeu7tmv8/SIGGRAPH_2020_Presentations%20to%20share.key?dl=0">Slides</a></p>
                 </div>
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
