--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 </div>
                 <div class="column has-text-centered has-text-centered">
                   <figure class="image is-16by9 container">
-                   <a href="https://www.dropbox.com/s/05beidjdeu7tmv8/SIGGRAPH_2020_Presentations%20to%20share.key?dl=0"><img src="images/slides.jpg" alt="Slides" style="max-height:64px; max-width: 114px"></a>
+                   <a href="https://youtu.be/RRBpz2zaA-w"><img src="images/slides.jpg" alt="Talk" style="max-height:64px; max-width: 114px"></a>
                   </figure>
-                  <p class="content"><a href="https://www.dropbox.com/s/05beidjdeu7tmv8/SIGGRAPH_2020_Presentations%20to%20share.key?dl=0">Slides</a></p>
+                  <p class="content"><a href="https://youtu.be/RRBpz2zaA-w">Talk</a> (<a href="https://www.dropbox.com/s/05beidjdeu7tmv8/SIGGRAPH_2020_Presentations%20to%20share.key?dl=0">Slides</a>)</p>
                 </div>
                 <div class="column has-text-centered">
                   <figure class="image is-64x64 container">
